screen is now responsive, need to fix the vertical alignment. starting to make the operator buttons toggle and display answers

--- a/style/style.css
+++ b/style/style.css
@@ -22,12 +22,16 @@
 }
 
 .screen {
-    display: grid;
+    display: flex;
+    flex-direction: row-reverse;
     height: 100px;
-    width: 425px;
+    width: 385px;
     margin: auto;
     border-radius: 20%;
     font-family: 'Press Start 2P', cursive;
+    font-size: 48px;
+    overflow: scroll;
+    text-overflow: ellipsis;
 }
 
 .btn {
@@ -37,5 +41,13 @@
     font-size: 36px !important;
     height: 90%;
     width: 90%;
+    text-align: center;
+}
+
+.num {
+    text-align: bottom;
+}
+
+.ops {
     text-align: center;
 }
